syntax = "proto3";

option csharp_namespace = "GrpcSubscription";

package SubscriptionApi.Common;

message GrpcEmptyRequest {
}
message GrpcByIdRequest {
    string Id = 1;
}
message GrpcPagingRequest {
    int32 PageNumber = 1;
    int32 PageSize = 2;
}
message GrpcDeleteRequest {
    string Id = 1;
    string UpdateBy = 2;
}
message GrpcBoolResponse {
    bool Success = 1;
}